[package]
name = "diesel_migrations"
version = "1.3.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Migration management for diesel"
documentation = "https://docs.rs/crate/diesel_migrations"
homepage = "http://diesel.rs"


[dependencies]
migrations_internals = { path = "migrations_internals" }
migrations_macros = { path = "migrations_macros" }

[dev-dependencies]
diesel = { path = "../diesel", default-features = false, features = ["sqlite", "postgres", "mysql"] }
dotenv = ">=0.8, <0.11"
cfg-if = "0.1.0"

[features]
default = []
sqlite = []
postgres = []
mysql = []
